Added delete for ad
